--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <script src="jquery.js" type="text/javascript"></script>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src="jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="jquery-3.5.1.js" ></script>
     <link rel='stylesheet' type='text/css' media='screen' href='jquery.toast.css'>
     <script src="jquery.toast.js"></script>
     <script src="howler.min.js" type="text/javascript"></script>
